tests/NormalTests/paczka1/fuzzy1/24676300.err
Error in line 7: dqqR S225 51,2
Error in line 15: dqqR S440 5,5
Error in line 22: lvMbK S159 49,2
Error in line 29: A128 S159 43,5
